docs: glider accessory slot shipped; JDK swapped to Temurin
The glider-in-an-Accessories-slot plan is executed and verified in-game — all
of its section 1 criteria pass. The mod itself does not live here: it is now
Gliding Accessories at github.com/benji-hix/Gliding-Accessories, which retires
the plan's decision 4g (mod identity) and leaves 9a as the only pack-side step.

Ledger 8a: a third native crash, this one on a ZGC worker thread with no Java
frames, proved -XX:+UseZGC alone was not enough. Took section 8's own fallback
and pointed Rain's JavaPath at the Temurin 21.0.12 JRE. Open-Air is untouched
and still on the Microsoft JDK; mirror it only if Rain proves stable.

Neither crash implicates the new mod — the first predates its install.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>